--- a/public/admin/createbusiness/includes/createBusinessForm.inc.html
+++ b/public/admin/createbusiness/includes/createBusinessForm.inc.html
@@ -1,11 +1,32 @@
-<form class="mainForm" action="./" method="POST">
-    <label for="displayName"><p class="formInputTitle">Business Name</p></label>
-    <input type="text" name="displayName" id="displayName">
-    <label for="displayName"><p class="formInputTitle">Internal Display Name (What you see in Ultiscape)</p></label>
-    <input type="text" name="adminDisplayName" id="adminDisplayName">
-    <input type="file" name="fullLogoFile" id="fullLogoFile">
+<form class="defaultForm" action="./" method="POST">
 
-    <br><br>
-                        
-    <button class="smallButtonWrapper greenButton centered defaultMainShadows" type="submit">Create!</button>
+	<label for="displayName"><p>Business Name</p></label>
+	<input class="bigInput" type="text" name="displayName" id="displayName" placeholder="Business name..." style="width: 70%;">
+	<br><br>
+
+	<label for="displayName"><p>Internal Display Name (What you see in Ultiscape)</p></label>
+	<input class="defaultInput" type="text" name="adminDisplayName" id="adminDisplayName" placeholder="Internal display name...">
+	<br><br>
+
+	<label for="fullLogoFile"><p>Logo File (Optional)</p></label>
+	<input type="file" name="fullLogoFile" id="fullLogoFile">
+	<br><br>
+
+	<label for="address"><p>Address (Optional)</p></label>
+	<input class="defaultInput" type="text" name="address" id="address" placeholder="Address...">
+	<br><br>
+
+	<label for="state"><p>State (Optional)</p></label>
+	<input class="defaultInput" type="text" name="state" id="state" placeholder="State...">
+	<br><br>
+
+	<label for="city"><p>City (Optional)</p></label>
+	<input class="defaultInput" type="text" name="city" id="city" placeholder="City...">
+	<br><br>
+
+	<label for="zipCode"><p>Zip Code (Optional)</p></label>
+	<input class="defaultInput" type="text" name="zipCode" id="zipCode" placeholder="Zip code...">
+	<br><br>
+	
+	<button class="smallButtonWrapper greenButton centered defaultMainShadows" type="submit">Create!</button>
 </form>
