--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -35,11 +35,9 @@
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
-/* Utility Classes */
+/* Alignments */
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
-
-/*Centers*/
 
 .marginCentered {
 	margin-left: auto;
@@ -82,48 +80,248 @@
 	flex-direction: row;
 }
 
-/*Margins*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Margins */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 
 .margin1em {
 	margin-left: 1em;
 	margin-right: 1em;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 .margin2em {
 	margin-left: 2em;
 	margin-right: 2em;
+	margin-top: 2em;
+	margin-bottom: 2em;
 }
 
 .margin90 {
 	margin-left: 5%;
 	margin-right: 5%;
+	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
 .margin80 {
 	margin-left: 10%;
 	margin-right: 10%;
+	margin-top: 10%;
+	margin-bottom: 10%;
 }
 
 .margin70 {
 	margin-left: 15%;
 	margin-right: 15%;
+	margin-top: 15%;
+	margin-bottom: 15%;
 }
 
 .margin60 {
 	margin-left: 20%;
 	margin-right: 20%;
+	margin-top: 20%;
+	margin-bottom: 20%;
 }
 
-/*Columns*/
+.marginLeftRight1em {
+	margin-left: 1em;
+	margin-right: 1em;
+}
 
+.marginLeftRight2em {
+	margin-left: 2em;
+	margin-right: 2em;
+}
 
-/*Scaling*/
+.marginLeftRight90 {
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+.marginLeftRight80 {
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+.marginLeftRight70 {
+	margin-left: 15%;
+	margin-right: 15%;
+}
+
+.marginLeftRight60 {
+	margin-left: 20%;
+	margin-right: 20%;
+}
+
+.marginTopBottom1em {
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+.marginTopBottom2em {
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+.marginTopBottom90 {
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+.marginTopBottom80 {
+	margin-top: 10%;
+	margin-bottom: 10%;
+}
+
+.marginTopBottom70 {
+	margin-top: 15%;
+	margin-bottom: 15%;
+}
+
+.marginTopBottom60 {
+	margin-top: 20%;
+	margin-bottom: 20%;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Paddings */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+
+.padding1em {
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
+.padding2em {
+	padding-left: 2em;
+	padding-right: 2em;
+}
+
+.padding90 {
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.padding80 {
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.padding70 {
+	padding-left: 15%;
+	padding-right: 15%;
+}
+
+.padding60 {
+	padding-left: 20%;
+	padding-right: 20%;
+}
+
+.paddingLeftRight1em {
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
+.paddingLeftRight2em {
+	padding-left: 2em;
+	padding-right: 2em;
+}
+
+.paddingLeftRight90 {
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.paddingLeftRight80 {
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.paddingLeftRight70 {
+	padding-left: 15%;
+	padding-right: 15%;
+}
+
+.paddingLeftRight60 {
+	padding-left: 20%;
+	padding-right: 20%;
+}
+
+.paddingTopBottom1em {
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+
+.paddingTopBottom2em {
+	padding-top: 2em;
+	padding-bottom: 2em;
+}
+
+.paddingTopBottom90 {
+	padding-top: 5%;
+	padding-bottom: 5%;
+}
+
+.paddingTopBottom80 {
+	padding-top: 10%;
+	padding-bottom: 10%;
+}
+
+.paddingTopBottom70 {
+	padding-top: 15%;
+	padding-bottom: 15%;
+}
+
+.paddingTopBottom60 {
+	padding-top: 20%;
+	padding-bottom: 20%;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Columns */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+
+.twoColPage-Info-Content {
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: min-content min-content;
+	grid-template-areas:
+	"info"
+	"content";
+}
+
+.twoColPage-Info-Content #twoColInfoWrapper {
+	grid-area: info;
+}
+
+.twoColPage-Info-Content #twoColContentWrapper {
+	grid-area: content;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Scaling */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 
 .maxHeight {
 	height: 100%;
 }
 
-/*Shadows*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Shadows */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 
 .defaultMainShadows {
 	box-shadow: inset 0px 8px 8px -10px rgb(58, 58, 58), inset 5px 0px 8px -10px rgb(58, 58, 58);
@@ -147,7 +345,11 @@
 	-moz-box-shadow: -1px 2px 6px 0px rgba(0,0,0,0.15);
 }
 
-/*Styled Text*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Styled Text */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 
 .styledText h1, .styledText h2, .styledText h3, .styledText h4, .styledText h5, .styledText h6 {
     font-weight: 400;
@@ -211,7 +413,11 @@
 	color: var(--inventoryColorTheme);
 }
 
-/*Gradients*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Gradients */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 
 .gradientRadialLeftGreen1 {
 	background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(1,150,21,1) 0%, rgba(198,239,146,1) 90% );
@@ -331,6 +537,56 @@
 	display: inline-block;
 	padding: 1.5em;
 	width: 500px;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Forms */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+
+.defaultForm label p {
+	color: rgb(100, 100, 100);
+	margin-bottom: .2em;
+	font-size: .9em;
+}
+
+.defaultForm .defaultInput {
+	outline: none;
+	border: 1px solid gray;
+	border-radius: .1em;
+
+	height: 1.5em;
+
+	font-size: 1.1em;
+	color: rgb(68, 68, 68);
+
+	padding: .2em;
+
+	transition: all 300ms;
+}
+.defaultForm .defaultInput:focus {
+	outline: 1px solid var(--utliscapeColorTheme);
+}
+
+.defaultForm .bigInput {
+	outline: none;
+	border: none;
+	border-bottom: 3px solid gray;
+
+	height: 2em;
+
+	font-size: 1.5em;
+	color: rgb(68, 68, 68);
+
+	padding-top: .3em;
+	padding-left: .1em;
+	padding-right: .3em;
+
+	transition: all 300ms;
+}
+.defaultForm .bigInput:focus {
+	border-bottom: 3px solid var(--utliscapeColorTheme);
 }
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
@@ -718,16 +974,28 @@ html, body {
 		"sideBar mainContent"
 		"sideBar footer";
 	}
-
 	.cmsMobileNavBarWrapper {
 		display: none;
 	}
-
 	.cmsSideBarWrapper {
 		display: flex;
 	}
-
 	.cmsFooterWrapper {
 		display: flex;
+	}
+
+	.twoColPage-Info-Content {
+		grid-template-columns: 40% 60%;
+		grid-template-rows: 100%;
+		grid-template-areas: "info content";
+	}
+	.twoColPage-Info-Content #twoColInfoWrapper {
+		text-align: right;
+	}
+	.twoColPage-Info-Content #twoColContentWrapper {
+		padding-top: 3em; 
+		padding-bottom: 3em;
+	
+		overflow: auto;
 	}
 }
