--- a/public/admin/createbusiness/includes/createBusinessForm.inc.html
+++ b/public/admin/createbusiness/includes/createBusinessForm.inc.html
@@ -1,32 +1,61 @@
 <form class="defaultForm" action="./" method="POST">
 
-	<label for="displayName"><p>Business Name</p></label>
-	<input class="bigInput" type="text" name="displayName" id="displayName" placeholder="Business name..." style="width: 70%;">
+	<label for="displayName"><p>Business Name <span style="color: rgb(167, 0, 0);">*</span></p></label>
+	<input class="bigInput" type="text" name="displayName" id="displayName" placeholder="Business name..." style="width: 70%;" required>
 	<br><br>
 
 	<label for="displayName"><p>Internal Display Name (What you see in Ultiscape)</p></label>
 	<input class="defaultInput" type="text" name="adminDisplayName" id="adminDisplayName" placeholder="Internal display name...">
 	<br><br>
 
-	<label for="fullLogoFile"><p>Logo File (Optional)</p></label>
+	<label for="fullLogoFile"><p>Logo File</p></label>
 	<input type="file" name="fullLogoFile" id="fullLogoFile">
 	<br><br>
 
-	<label for="address"><p>Address (Optional)</p></label>
-	<input class="defaultInput" type="text" name="address" id="address" placeholder="Address...">
+	<div class="twoCol">
+
+		<div>
+			<label for="address"><p>Address</p></label>
+			<input class="defaultInput" type="text" name="address" id="address" placeholder="Address..." style="width: 90%">
+			<br><br>
+		
+			<label for="state"><p>State</p></label>
+			<input class="defaultInput" type="text" name="state" id="state" placeholder="State..." style="width: 90%">
+		</div>
+
+		<div>
+			<label for="city"><p>City</p></label>
+			<input class="defaultInput" type="text" name="city" id="city" placeholder="City..." style="width: 90%">
+			<br><br>
+
+			<label for="zipCode"><p>Zip Code</p></label>
+			<input class="defaultInput" type="text" name="zipCode" id="zipCode" placeholder="Zip code..." style="width: 90%">
+		</div>
+		
+	</div>
+	
 	<br><br>
 
-	<label for="state"><p>State (Optional)</p></label>
-	<input class="defaultInput" type="text" name="state" id="state" placeholder="State...">
-	<br><br>
+	<label for="phone1"><p>Phone Number</p></label>
+	<div class="fourColCompact">
+		<div>
+			<input class="defaultInput" type="text" name="phonePrefix" id="phonePrefix" placeholder="+1" value="1" style="width: 3em;">
+		</div>
 
-	<label for="city"><p>City (Optional)</p></label>
-	<input class="defaultInput" type="text" name="city" id="city" placeholder="City...">
-	<br><br>
+		<div>
+			<input class="defaultInput" type="text" name="phone1" id="phone1" placeholder="555" style="width: 6em;">
+		</div>
 
-	<label for="zipCode"><p>Zip Code (Optional)</p></label>
-	<input class="defaultInput" type="text" name="zipCode" id="zipCode" placeholder="Zip code...">
+		<div>
+			<input class="defaultInput" type="text" name="phone2" id="phone2" placeholder="555" style="width: 6em;">
+		</div>
+
+		<div>
+			<input class="defaultInput" type="text" name="phone3" id="phone3" placeholder="5555" style="width: 6em;">
+		</div>
+	</div>
+
 	<br><br>
 	
-	<button class="smallButtonWrapper greenButton centered defaultMainShadows" type="submit">Create!</button>
+	<button class="mediumButtonWrapper greenButton centered defaultMainShadows" type="submit">Create!</button>
 </form>
