--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -86,20 +86,6 @@
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 
-.margin1em {
-	margin-left: 1em;
-	margin-right: 1em;
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
-
-.margin2em {
-	margin-left: 2em;
-	margin-right: 2em;
-	margin-top: 2em;
-	margin-bottom: 2em;
-}
-
 .margin90 {
 	margin-left: 5%;
 	margin-right: 5%;
@@ -128,16 +114,6 @@
 	margin-bottom: 20%;
 }
 
-.marginLeftRight1em {
-	margin-left: 1em;
-	margin-right: 1em;
-}
-
-.marginLeftRight2em {
-	margin-left: 2em;
-	margin-right: 2em;
-}
-
 .marginLeftRight90 {
 	margin-left: 5%;
 	margin-right: 5%;
@@ -156,16 +132,6 @@
 .marginLeftRight60 {
 	margin-left: 20%;
 	margin-right: 20%;
-}
-
-.marginTopBottom1em {
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
-
-.marginTopBottom2em {
-	margin-top: 2em;
-	margin-bottom: 2em;
 }
 
 .marginTopBottom90 {
@@ -194,16 +160,6 @@
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 
-.padding1em {
-	padding-left: 1em;
-	padding-right: 1em;
-}
-
-.padding2em {
-	padding-left: 2em;
-	padding-right: 2em;
-}
-
 .padding90 {
 	padding-left: 5%;
 	padding-right: 5%;
@@ -224,16 +180,6 @@
 	padding-right: 20%;
 }
 
-.paddingLeftRight1em {
-	padding-left: 1em;
-	padding-right: 1em;
-}
-
-.paddingLeftRight2em {
-	padding-left: 2em;
-	padding-right: 2em;
-}
-
 .paddingLeftRight90 {
 	padding-left: 5%;
 	padding-right: 5%;
@@ -252,16 +198,6 @@
 .paddingLeftRight60 {
 	padding-left: 20%;
 	padding-right: 20%;
-}
-
-.paddingTopBottom1em {
-	padding-top: 1em;
-	padding-bottom: 1em;
-}
-
-.paddingTopBottom2em {
-	padding-top: 2em;
-	padding-bottom: 2em;
 }
 
 .paddingTopBottom90 {
@@ -298,13 +234,53 @@
 	"info"
 	"content";
 }
-
 .twoColPage-Info-Content #twoColInfoWrapper {
 	grid-area: info;
 }
-
 .twoColPage-Info-Content #twoColContentWrapper {
 	grid-area: content;
+}
+
+.twoCol {
+	display: grid;
+	grid-template-columns: 50%, 50%;
+	grid-template-rows: min-content;
+	grid-template-areas: "1 2";
+}
+.twoColCompact {
+	display: grid;
+	grid-template-columns: min-content min-content;
+	grid-template-rows: min-content;
+	grid-template-areas: "1 2";
+	column-gap: 1em;
+}
+
+.threeCol {
+	display: grid;
+	grid-template-columns: 33%, 33%, 33%;
+	grid-template-rows: min-content;
+	grid-template-areas: "1 2 3";
+}
+.threeColCompact {
+	display: grid;
+	grid-template-columns: min-content min-content min-content;
+	grid-template-rows: min-content;
+	grid-template-areas: "1 2 3";
+	column-gap: 1em;
+}
+
+.fourCol {
+	display: grid;
+	grid-template-columns: 25%, 25%, 25%;
+	grid-template-rows: min-content;
+	grid-template-areas: "1 2 3 4";
+}
+.fourColCompact {
+	display: grid;
+	grid-template-columns: min-content min-content min-content min-content;
+	grid-template-rows: min-content;
+	grid-template-areas: "1 2 3 4";
+	column-gap: 1em;
 }
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
@@ -499,8 +475,45 @@
 
 	transition: filter .2s ease-in;
 }
-
 .smallButtonWrapper:hover {
+	filter: brightness(.9);
+}
+
+.mediumButtonWrapper {
+	font-size: 1.25em;
+	font-weight: bold;
+
+	padding: .5em;
+	padding-left: 1.25em;
+	padding-right: 1.25em;
+
+	border: 1px solid #707070;
+	border-radius: .1em;
+
+	cursor: pointer;
+
+	transition: filter .2s ease-in;
+}
+.mediumButtonWrapper:hover {
+	filter: brightness(.9);
+}
+
+.largeButtonWrapper {
+	font-size: 1.5em;
+	font-weight: bold;
+
+	padding: 1em;
+	padding-left: 1.5em;
+	padding-right: 1.5em;
+
+	border: 1px solid #707070;
+	border-radius: .1em;
+
+	cursor: pointer;
+
+	transition: filter .2s ease-in;
+}
+.largeButtonWrapper:hover {
 	filter: brightness(.9);
 }
 
