minor changes to spacing/layout and fix label assignement

--- a/public/admin/createbusiness/includes/createBusinessForm.inc.html
+++ b/public/admin/createbusiness/includes/createBusinessForm.inc.html
@@ -4,7 +4,7 @@
 	<input class="bigInput" type="text" name="displayName" id="displayName" placeholder="Business name..." style="width: 70%;" required>
 	<br><br>
 
-	<label for="displayName"><p>Internal Display Name (What you see in Ultiscape)</p></label>
+	<label for="adminDisplayName"><p>Internal Display Name (What you see in Ultiscape)</p></label>
 	<input class="defaultInput" type="text" name="adminDisplayName" id="adminDisplayName" placeholder="Internal display name...">
 	<br><br>
 
@@ -18,14 +18,14 @@
 			<label for="address"><p>Address</p></label>
 			<input class="defaultInput" type="text" name="address" id="address" placeholder="Address..." style="width: 90%">
 			<br><br>
-		
-			<label for="state"><p>State</p></label>
-			<input class="defaultInput" type="text" name="state" id="state" placeholder="State..." style="width: 90%">
+
+			<label for="city"><p>City</p></label>
+			<input class="defaultInput" type="text" name="city" id="city" placeholder="City..." style="width: 90%">
 		</div>
 
 		<div>
-			<label for="city"><p>City</p></label>
-			<input class="defaultInput" type="text" name="city" id="city" placeholder="City..." style="width: 90%">
+			<label for="state"><p>State</p></label>
+			<input class="defaultInput" type="text" name="state" id="state" placeholder="State..." style="width: 90%">
 			<br><br>
 
 			<label for="zipCode"><p>Zip Code</p></label>
@@ -34,7 +34,7 @@
 		
 	</div>
 	
-	<br><br>
+	<br>
 
 	<label for="phone1"><p>Phone Number</p></label>
 	<div class="fourColCompact">
