add maxWidth class

--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -293,6 +293,10 @@
 	height: 100%;
 }
 
+.maxWidth {
+	width: 100%;
+}
+
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /* Shadows */
