fix syntax of grid column width declarations

--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -243,7 +243,7 @@
 
 .twoCol {
 	display: grid;
-	grid-template-columns: 50%, 50%;
+	grid-template-columns: 50% 50%;
 	grid-template-rows: min-content;
 	grid-template-areas: "1 2";
 }
@@ -257,7 +257,7 @@
 
 .threeCol {
 	display: grid;
-	grid-template-columns: 33%, 33%, 33%;
+	grid-template-columns: 33% 33% 33%;
 	grid-template-rows: min-content;
 	grid-template-areas: "1 2 3";
 }
@@ -271,7 +271,7 @@
 
 .fourCol {
 	display: grid;
-	grid-template-columns: 25%, 25%, 25%;
+	grid-template-columns: 25% 25% 25%;
 	grid-template-rows: min-content;
 	grid-template-areas: "1 2 3 4";
 }
