add .underInputError class for default forms

--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -622,6 +622,11 @@
 	border-bottom: 3px solid var(--utliscapeColorTheme);
 }
 
+.defaultForm .underInputError {
+	font-style: italic;
+	color: red;
+}
+
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /* Website Init */
