--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -16,6 +16,10 @@
 	font-family: 'Source Sans Pro', sans-serif;
 	margin: 0;
 	padding: 0;
+
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeLegibility;
 }
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
