--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -508,6 +508,38 @@ a.noUnderline {
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Hover Tips */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+
+.hoverTip {
+	border-bottom: 1px dotted var(--utliscapeColorTheme);
+	position: relative;
+	cursor: help;
+	text-decoration: none;
+	color: inherit;
+  }
+
+  .hoverTip span {
+	display: none;
+	z-index: 99999;
+	position: absolute;
+	padding: .3em;
+	padding-left: .5em;
+	top: 1.5em;
+	left: 2.4em;
+	width: 10em;
+	background-color: white;
+	border: 1px solid gray;
+	border-radius: 0.5em;
+  }
+
+  .hoverTip:hover span {
+	display: inline-block;
+  }
+
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 /* Gradients */
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
@@ -781,7 +813,7 @@ a.noUnderline {
 	padding:10px 5px;
 	border-style:solid;
 	border-width:1px;
-	overflow:hidden;
+	overflow: visible;
 	word-break:normal;
 	border-color:#ccc;
 	color:#333;
@@ -799,8 +831,22 @@ a.noUnderline {
 	word-break:normal;
 	border-color:#ccc;
 	color:#333;
-	background-color:#f0f0f0;
+	background-color:#d0d0d0;
 	text-align: center;
+}
+
+.defaultTable.highlightOdd tr:nth-child(odd) td {
+	background-color: #f5f5f5;
+}
+
+.defaultTable.highlightEven tr:nth-child(even) td {
+	background-color: #f5f5f5;
+}
+.defaultTable.hoverHighlight tr td {
+	transition: background-color 100ms;
+}
+.defaultTable.hoverHighlight tr:hover td {
+	background-color: #ebebeb !important;
 }
 
 .defaultTable .la {
@@ -824,6 +870,9 @@ a.noUnderline {
 }
 .defaultTable .vab {
 	vertical-align: bottom;
+}
+.defaultTable .vam {
+	vertical-align: middle;
 }
 
 .defaultTable .nrb {
