--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -609,6 +609,28 @@ a.noUnderline {
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 
+.extraSmallButtonWrapper {
+	font-size: .8em;
+	font-weight: bold;
+
+	padding-top: .1em;
+	padding-bottom: .1em;
+	padding-left: .5em;
+	padding-right: .5em;
+
+	height: 1em;
+
+	border: 1px solid #707070 !important;
+	border-radius: .2em;
+
+	cursor: pointer;
+
+	transition: filter .2s ease-in;
+}
+.smallButtonWrapper:hover {
+	filter: brightness(.9);
+}
+
 .smallButtonWrapper {
 	font-size: 1em;
 	font-weight: bold;
@@ -676,6 +698,11 @@ a.noUnderline {
 
 .orangeButton {
 	background-color: #D47100;
+	color: white !important;
+}
+
+.redButton {
+	background-color: #d40000;
 	color: white !important;
 }
 
