Work on tag editor

--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -930,6 +930,7 @@ a.noUnderline {
     border-color: #cccccc;
     text-decoration: none;
     color: black;
+	cursor: pointer;
 }
 
 .pageNavigator .pageButton {
@@ -941,6 +942,7 @@ a.noUnderline {
     border-color: #cccccc;
     text-decoration: none;
     color: black;
+	cursor: pointer;
 }
 
 
