work on tag editor and add tag editor to customer view/edit page

--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -945,6 +945,39 @@ a.noUnderline {
 	cursor: pointer;
 }
 
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Tag Editor */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+
+.tagBox {
+	display: inline-flex;
+	align-items: center;
+	border-radius: 0em 1em 1em 0em ;
+	padding-left: .3em;
+	padding-right: .3em;
+	padding-top: .1em;
+	padding-bottom: .1em;
+	color: white;
+	margin-right: .5em;
+	margin-left: .1em;
+}
+
+.addTagDialog {
+	display: none;
+	z-index: 99999;
+	position: absolute;
+	padding: .3em;
+	padding-left: .5em;
+	top: 1em;
+	left: 2em;
+	width: 10em;
+	background-color: white;
+	border: 1px solid gray;
+	border-radius: 0.5em;
+}
+
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
