start on jobs section, calendar

--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -1388,6 +1388,29 @@ html, body {
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
+/* Job Calendar */
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+
+.jobCalendar tr td .job {
+	color: white;
+    border-radius: .2em;
+    width: 95%;
+	cursor: pointer;
+
+	margin-bottom: .2em;
+}
+
+.jobCalendar tr td .job.activeJob {
+    background-color: rgb(187, 187, 187);
+}
+
+.jobCalendar tr td .job.completedJob {
+    background-color: var(--utliscapeColorTheme);
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 /* Media Queries */
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
