--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -854,6 +854,15 @@ a.noUnderline {
 	color: red;
 }
 
+/* Input Wrappers */
+
+.themedInputGroup {
+	border: 1px solid green;
+	padding: 1em;
+	width: 93%;
+	border-radius: .3em;
+}
+
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /* Tables */
@@ -862,11 +871,13 @@ a.noUnderline {
 
 .defaultTable {
 	border-collapse:collapse;
-	border-spacing:0;
+	/* border-spacing:0;
 	border-color:#ccc;
 	border-style: solid;
-	border-width: 1px;
-
+	border-width: 0px; */
+	border-radius: .4em;
+	overflow: hidden;
+	box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.15);
 	width: 100%;
 	max-width: 100%;
 }
