--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -779,12 +779,12 @@ a.noUnderline {
 
 .defaultForm input.defaultInput {
 	height: 1.5em;
-	background-color: inherit;
+	background-color: rgb(235, 235, 235);
 }
 
 .defaultForm select.defaultInput {
 	height: 2em;
-	background-color: inherit;
+	background-color: rgb(235, 235, 235);
 }
 
 .defaultForm input.defaultInput[type="checkbox"] {
@@ -805,7 +805,7 @@ a.noUnderline {
 
 	transition: all 300ms;
 
-	background-color: inherit;
+	background-color: rgb(235, 235, 235);
 }
 .defaultInput:focus {
 	outline: 1px solid var(--utliscapeColorTheme);
@@ -826,7 +826,7 @@ a.noUnderline {
 	padding-right: .3em;
 
 	transition: all 300ms;
-	background-color: inherit;
+	background-color: rgb(235, 235, 235);
 }
 .bigInput:focus {
 	border-bottom: 3px solid var(--utliscapeColorTheme);
@@ -836,7 +836,7 @@ a.noUnderline {
 	outline: none;
 	border: none;
 	transition: all 300ms;
-	background-color: inherit;
+	background-color: rgb(235, 235, 235);
 }
 
 .invisibleInput:hover {
@@ -847,7 +847,7 @@ a.noUnderline {
 	outline: none;
 	border: none;
 	border-bottom: 1px solid rgb(196, 196, 196);
-	background-color: inherit;
+	background-color: rgb(235, 235, 235);
 }
 
 .almostInvisibleInput:hover {
