--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -618,7 +618,8 @@ a.noUnderline {
 	padding-left: .5em;
 	padding-right: .5em;
 
-	border: 1px solid #707070 !important;
+	/* border: 1px solid #707070 !important; */
+	border: none;
 	border-radius: .2em;
 
 	cursor: pointer;
@@ -639,7 +640,8 @@ a.noUnderline {
 	padding-right: 1em;
 
 
-	border: 1px solid #707070 !important;
+	/* border: 1px solid #707070 !important; */
+	border: none;
 	border-radius: .2em;
 
 	cursor: pointer;
@@ -658,7 +660,8 @@ a.noUnderline {
 	padding-left: 1.25em;
 	padding-right: 1.25em;
 
-	border: 1px solid #707070;
+	/* border: 1px solid #707070; */
+	border: none;
 	border-radius: .1em;
 
 	cursor: pointer;
@@ -677,7 +680,8 @@ a.noUnderline {
 	padding-left: 1.5em;
 	padding-right: 1.5em;
 
-	border: 1px solid #707070;
+	/* border: 1px solid #707070; */
+	border: none;
 	border-radius: .1em;
 
 	cursor: pointer;
@@ -864,7 +868,7 @@ a.noUnderline {
 	/* border: 1px solid green; */
 	padding: 1em;
 	width: 93%;
-	border: 1px solid #ccc;
+	/* border: 1px solid #ccc; */
 	border-radius: .3em;
 	/* box-shadow: -1px 2px 16px 0px rgba(0,0,0,0.15); */
 	box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.15);
@@ -1486,7 +1490,7 @@ html, body {
 }
 
 .jobCalendar tr td .job.cancelledJob {
-    background-color: rgb(196, 54, 54);
+    background-color: rgba(196, 54, 54, 0.344);
 	text-decoration: line-through;
 }
 
